@@ -2,6 +2,7 @@
 2004/09/08: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - fixed a bug in typemaker
+- fixed a bug in nettransportssl.c
 
 
 2004-09-03   Christian Stimming <stimming@tuhh.de>
